@@ -1,7 +1,8 @@
 %tt
-  == <span class="#{campaign.status.downcase.gsub(" ", "")}">#{campaign.status.downcase}</span>
-  - case campaign.status
-    - when "Started"
+  %span{:class => campaign.status}<
+    = @status[campaign.status.intern][:label].downcase
+  - case campaign.status.intern
+    - when :started
       - if campaign.starts_on
         = time_ago_in_words(campaign.starts_on) << " ago"
         - if campaign.ends_on
@@ -11,7 +12,7 @@
             %span.warn= "(was supposed to end on #{campaign.starts_on.strftime('%b %e, %Y')})"
       - else
         %span.warn> no start date specified
-    - when "Planned"
+    - when :planned
       - if campaign.starts_on
         - if campaign.starts_on > Date.today
           = " starts in " << distance_of_time_in_words(Date.today, campaign.starts_on)
@@ -21,5 +22,5 @@
           %span.cool starts today!
       - else
         %span.warn no start date specified
-    - when "Completed"
+    - when :completed
       = "on #{campaign.ends_on.strftime('%b %e, %Y')}" if campaign.ends_on
