@@ -1,2 +1,3 @@
 #footer
-  == Powered by #{link_to "Fat Free CRM", home_path} &copy; 2008 by Michael Dvorkin
+  == Powered by #{link_to "Fat Free CRM", "http://www.fatfreecrm.com"} &copy; 2008 by Michael Dvorkin
+%br
